builder/examples/08-unrecognized-attribute.stderr
error: expected `builder(each = "...")`
  --> examples/08-unrecognized-attribute.rs:22:15
   |
22 |     #[builder(eac = "arg")]
   |               ^^^
